Add error wrapping and quality estimation functionality
An error wrapping in `cmd.go` where the error's output could include valuable information to help determine why an execution of commands failed has been introduced. Two new models (`EstimateQualityRequest` and `EstimateQualityResponse`) in `models/inscriptions.go` to handle the quality estimation of an inscription have been implemented. The library versions in `go.sum` have been updated to ensure compatibility and numerous potential bugs have been fixed. Additionally, documentation in `swagger.yaml` and a string splitter in `getInscriptions.go` that splits locations into available components have been added. This all enhances the software's robustness and provides new features.
