# docs/swagger.json
@@ -111,6 +111,58 @@
                 }
             }
         },
+        "/fee/quality/estimate": {
+            "post": {
+                "description": "Estimate inscription cost based on quality",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Inscriptions"
+                ],
+                "summary": "Estimate inscription cost based on quality",
+                "parameters": [
+                    {
+                        "description": "Image URL from hosting service and number of blocks",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.EstimateQualityRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.EstimateQualityResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorHTTP"
+                        }
+                    }
+                }
+            }
+        },
         "/feerate": {
             "get": {
                 "description": "Get fee rate for transaction",
@@ -708,6 +760,34 @@
                 }
             }
         },
+        "models.EstimateQualityRequest": {
+            "type": "object",
+            "properties": {
+                "fee_rate": {
+                    "type": "integer"
+                },
+                "quality": {
+                    "type": "string"
+                },
+                "url_pic": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.EstimateQualityResponse": {
+            "type": "object",
+            "properties": {
+                "base64": {
+                    "type": "string"
+                },
+                "btc_amount": {
+                    "type": "number"
+                },
+                "size": {
+                    "type": "number"
+                }
+            }
+        },
         "models.EstimateRequest": {
             "type": "object",
             "properties": {
@@ -835,6 +915,9 @@
                 "content_link": {
                     "type": "string"
                 },
+                "file_format": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -952,6 +1035,9 @@
                 },
                 "feeRate": {
                     "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         },
@@ -993,6 +1079,9 @@
                     "type": "string"
                 },
                 "content_link": {
+                    "type": "string"
+                },
+                "file_format": {
                     "type": "string"
                 },
                 "id": {
