# models/inscriptions.go
@@ -17,3 +17,15 @@ type EstimateRequest struct {
 	NumberOfBlocks int    `json:"blocks"`
 	ImageURL       string `json:"imageUrl"`
 }
+
+type EstimateQualityRequest struct {
+	UrlPic  string `json:"url_pic"`
+	Quality string `json:"quality"`
+	FeeRate int    `json:"fee_rate"`
+}
+
+type EstimateQualityResponse struct {
+	Size      float64 `json:"size"`
+	B64       string  `json:"base64"`
+	BTCAmount float64 `json:"btc_amount"`
+}
